# BOT

./: botX_enhanced.py  bot_cogs.py  bot_utils.py  main.py  pyproject.toml
data/: bot_data.json  user_balances.json
instance/: bot.db
static/CSS/: custom.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  index.html  item_form.html  items.html  login.html  settings.html  tournament_form.html  tournaments.html  user_details.html  users.html
